--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,8 @@ ul {
 	padding: 0;
 	margin: 0;
 }
+
+
 .site-nav {
 	display: flex;
 }
@@ -155,7 +157,7 @@ ul {
 	cursor: pointer;
 	border: none;
 }
-/* section */
+/* ---------------------Чем мы занимаемся---------------- */
 .section-top {
 	padding-top: 94px;
 }
@@ -205,6 +207,7 @@ ul {
 	margin-top: 0;
 	margin-bottom: 0;
 }
+
 .title {
 	margin-bottom: 50px;
 	margin-top: 0;
@@ -214,6 +217,28 @@ ul {
 	font-size: 36px;
 	line-height: 1.2;
 	text-align: center;
+}
+.images-img {
+	display: block;
+}
+
+.images-thumb {
+	position: relative;
+
+	
+}
+.images-text {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	bottom: 0;
+	color: var(--text-white-color);
+	font-weight: 700;
+	text-transform: uppercase;
+	background-color: rgba(47, 48, 58, 0.8);
+	width: 100%;
+	height: 70px;
 }
 /* ---------------------------------------НАША КОМАНДА--------------------------------- */
 .team {
