--- a/css/styles.css
+++ b/css/styles.css
@@ -84,8 +84,21 @@ ul {
 .site-nav a:focus {
 	color: var(--accent-color);
 }
-.site-nav .page {
+.page {
 	color: var(--accent-color);
+	position: relative;
+}
+
+.page::after{
+	content: "";
+	display: block;
+	width: 100%;
+	height: 4px;
+	background-color: var(--accent-color);
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	border-radius: 2px;
 }
 .contacts {
 	display: flex;
