--- a/css/styles.css
+++ b/css/styles.css
@@ -79,10 +79,12 @@ ul {
 	font-weight: 500;
 	line-height: 1.2;
 	letter-spacing: 0.02em;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-nav a:hover,
 .site-nav a:focus {
 	color: var(--accent-color);
+	
 }
 .page {
 	color: var(--accent-color);
@@ -118,6 +120,7 @@ ul {
 	font-weight: 500;
 	line-height: 1.2;
 	letter-spacing: 0.02em;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts .contacts-email:hover,
 .contacts .contacts-email:focus {
@@ -326,12 +329,14 @@ ul {
 
 .team-social {
 	fill: #AFB1B8;
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	border-radius: 50% 50%;
 }
 .team-social:hover,
 .team-social:focus {
 	fill: var(--text-white-color);
 	background-color: var(--accent-color);
-	border-radius: 50% 50%;
+	
 }
 /* -----------------------------------Постоянные клиенты--------------------------------*/
 
@@ -354,6 +359,7 @@ ul {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-icon:hover,
 .clients-icon:focus {
@@ -386,6 +392,7 @@ ul {
 	text-align: center;
 	letter-spacing: 0.03em;
 	cursor: pointer;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filters-button:hover,
@@ -393,7 +400,6 @@ ul {
 	color: var(--text-white-color);
 	background-color: var(--accent-color);
 	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .project {
 	display: flex;
@@ -452,11 +458,11 @@ ul {
 }
 .project a {
 	display: block;
+	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .project a:hover,
 .project a:focus {
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .project > li > a {
 	text-decoration: none;
@@ -552,9 +558,56 @@ address {
 	fill: var(--text-white-color);
 	background-color: rgba(255, 255, 255, 0.1);
 	border-radius: 50% 50%;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icon:hover,
 .social-icon:focus {
 	background-color: var(--accent-color);
 	border-radius: 50% 50%;
+}
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.2);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	
+}
+.modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	width: 528px;
+	height: 581px;
+	background-color: var(--text-white-color);
+	
+}
+.is-hidden {
+	opacity: 0;
+	pointer-events: none;
+	
+}
+.backdrop .is-hidden {
+	opacity: 1;
+	pointer-events: none;
+	
+}
+.modal-close {
+	position: absolute;
+	top: 8px;
+	right: 8px;
+	fill: var(--logo-black-color);
+	background: var(--text-white-color);
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 50% 50%;
+	width: 30px;
+	height: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
 }
